syntax="proto3";

package message_rpc;

option go_package="pkg/pb/message_rpc";

message RpcAuthUnit {}

message RpcAuthCheckAsk {
    uint64 uid = 1;
    bytes token = 2;
}